RESOLVED FIXED225598
[iOS] Pages with service workers do not suspend promptly
https://bugs.webkit.org/show_bug.cgi?id=225598
Summary [iOS] Pages with service workers do not suspend promptly
Chris Dumez
Reported 2021-05-10 09:41:49 PDT
Pages with service workers do not suspend promptly on iOS.
Attachments
Patch (3.33 KB, patch)
2021-05-10 09:46 PDT, Chris Dumez
no flags
Patch (8.21 KB, patch)
2021-05-10 12:57 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-05-10 09:46:59 PDT
Radar WebKit Bug Importer
Comment 2 2021-05-10 09:47:27 PDT
Chris Dumez
Comment 3 2021-05-10 12:57:53 PDT
Geoffrey Garen
Comment 4 2021-05-10 13:23:01 PDT
Comment on attachment 428195 [details] Patch r=me
EWS
Comment 5 2021-05-10 14:26:04 PDT
Committed r277294 (237555@main): <https://commits.webkit.org/237555@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 428195 [details].
Note You need to log in before you can comment on or make changes to this bug.